WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116143
[sh4] savedTimeoutReg should be removed from JITStackFrame
https://bugs.webkit.org/show_bug.cgi?id=116143
Summary
[sh4] savedTimeoutReg should be removed from JITStackFrame
Julien Brianceau
Reported
2013-05-15 03:09:01 PDT
Since
r148119
, timeoutCheckRegister is removed from baseline JIT. So we don't need to keep r8 register in JITStackFrame anymore for sh4 baseline JIT (see
http://trac.webkit.org/changeset/148119/trunk/Source/JavaScriptCore/jit/JSInterfaceJIT.h
).
Attachments
Remove savedTimeoutReg from JITStackFrame for sh4 base JIT
(2.36 KB, patch)
2013-05-15 03:17 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-05-15 03:17:50 PDT
Created
attachment 201811
[details]
Remove savedTimeoutReg from JITStackFrame for sh4 base JIT I've tested this patch on
r150106
and I didn't see regressions when running - Tools/Scripts/run-javascriptcore-tests - Tools/Scripts/run-fast-jsc - SunSpider 1.0
Mark Lam
Comment 2
2013-05-15 08:25:52 PDT
Comment on
attachment 201811
[details]
Remove savedTimeoutReg from JITStackFrame for sh4 base JIT LGTM but need someone else to r+.
Geoffrey Garen
Comment 3
2013-05-15 12:33:49 PDT
Comment on
attachment 201811
[details]
Remove savedTimeoutReg from JITStackFrame for sh4 base JIT r=me
WebKit Commit Bot
Comment 4
2013-05-15 14:16:52 PDT
Comment on
attachment 201811
[details]
Remove savedTimeoutReg from JITStackFrame for sh4 base JIT Clearing flags on attachment: 201811 Committed
r150146
: <
http://trac.webkit.org/changeset/150146
>
WebKit Commit Bot
Comment 5
2013-05-15 14:16:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug