Remove savedTimeoutReg from JITStackFrame for sh4 base JIT. https://bugs.webkit.org/show_bug.cgi?id=116143

Patch by Julien Brianceau <jbrianceau@nds.com> on 2013-05-15
Reviewed by Geoffrey Garen.

Since r148119, timeoutCheckRegister is removed from baseline JIT.
So we don't need to save r8 register in JITStackFrame anymore for sh4.

* jit/JITStubs.cpp:
* jit/JITStubs.h:
(JITStackFrame):

Canonical link: https://commits.webkit.org/134575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150146 268f45cc-cd09-0410-ab3c-d52691b4dbfc